@@ -55,3 +55,4 @@ examples/view3d.pl
 examples/feedback.pl
 examples/xachlego.pl
 examples/xachshadow.pl
+examples/parasite-editor
